LATEST 
----------------------------------

UML-Editor 3.7.1 (2020-03-02) 
----------------------------------
- fix commit f6365559fc5ff7b3603e2524255a0367a0e87d08
- GeoIV-ID wird nicht exportiert (#27)
- fix program version in about dialog
- Write models of the IMPORTS-statement in a defined order (#26)
- Write topics of the DEPENDS-statement in a defined order
- ili2c-5.0.6

UML-Editor 3.7.0 (2018-12-28) 
----------------------------------
- navigation view: enable drag and drop
- navigation view: new function to export a single ili file
- AttributeDef UI: enable to edit EPSG code
- DomainDef UI: enable to edit EPSG code
- UI: set default filter in file selection dialogs
- UI: enable ESCAPE key in dialogs
- UI: enable search button
- new function to export model as XMI file
- new function to import a translation XML
- new function to export a translation XML
- ili2c-4.7.11
- replace use of 'sun' packages

UML-Editor 3.6.2 (2015-12-23) 
----------------------------------
- improved label "Language of model presentation"
- removed accuracy combobox from AREA/SURFACE panel
- iliimp: import GENERIC
- ili2c-4.5.20

UML-Editor 3.6.1 (2015-01-30) 
----------------------------------
- bug iliexp: failed to sort ModelDef inside one ili-file according to dependencies/imports
- ili2c-4.5.7

UML-Editor 3.6.0 (2014-12-30) 
----------------------------------
- iliimp: unwrap multivalue struct attrs to normal uml attrs
- iliimp: import interlis struct attrs as uml attrs
- bug iliimp: keep DomainRef to DomainDef with BOOLEAN, HALIGNMENT, VALIGNMENT, NAME, URI
- iliexp: export multivalue attrs with ili2.4 syntax
- bug iliimp: failed to import SET CONSTRAINT
- bug iliimp: failed to import ViewDef/Selection
- bug iliimp: failed to import ViewDef/ALL OF
- ili2c-4.5.6

UML-Editor 3.5.2 (2013-09-04) 
----------------------------------
- bug: fixed exception if reading some uml-files (because Name of TaggedValue is not yet set)

UML-Editor 3.5.1 (2013-09-02) 