@@ -1,5 +1,6 @@
 LATEST 
 ----------------------------------
+- iliimport: extend trace output (#28)
 
 UML-Editor 3.7.1 (2020-03-02) 
 ----------------------------------
